<resources>
    <string name="app_name">ArmoniaBills</string>
    <string name="tv_bienvenida">Bienvenido a Armonia Bills</string>
    <string name="hint_et_contra">Introduce la contraseña *</string>
    <string name="hint_et_email">Introduce tu correo electrónico *</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_reg">Registrar cuenta</string>
    <string name="tv_registro">Registro</string>
    <string name="hint_et_nombre">Introduce tu nombre *</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="home">Home</string>
    <string name="nuevo_gasto">Nuevo gasto</string>
    <string name="mis_deudas">Mis deudas</string>
    <string name="historial">Historial</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="tv_nombre">Nombre completo</string>
    <string name="tv_email">Correo electrónico</string>
    <string name="tv_telefono">Número de teléfono</string>
    <string name="tv_contrasenia">Contraseña</string>
    <string name="seleccionar_img">No se ha seleccionado ninguna imagen</string>
    <string name="email_registrado">El email introducido ya está registrado</string>
    <string name="btn_aceptar_d">Aceptar</string>
    <string name="btn_cancelar_d">Cancelar</string>
    <string name="tv_perfil">Perfil</string>
    <string name="hint_et_telefono">Número de tlf. (opcional)</string>
    <string name="btn_actualizar_datos">Actualizar datos</string>
    <string name="hint_et_repcontra">Repite la contraseña *</string>
    <string name="tv_repetir_contrasenia">Repetir contraseña</string>
    <string name="btn_cambiar_contrasenia">Cambiar contraseña</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="balance">%1$.2f€</string>
    <string name="cantidad_disponible">Cantidad disponible: %1$.2f€</string>
    <string name="tv_aniadir_gasto">Añadir nuevo gasto</string>
    <string name="hint_et_precio">Precio</string>
    <string name="hint_et_titulo_gasto">Título *</string>
    <string name="hint_et_descripcion">Descripción (opcional)</string>
    <string name="euro">€</string>
    <string name="tv_aniadir_grupo">Añadir nuevo grupo</string>
    <string name="hint_et_nombre_grupo">Nombre del grupo *</string>
    <string name="hint_et_participante">Añade una persona *</string>
    <string name="btn_aniadir_participante">Añadir</string>
    <string name="tv_personas">Personas</string>
    <string name="btn_depositar">Depositar</string>
    <string name="btn_retirar">Retirar</string>
    <string name="tv_deposito">¿Cuanto dinero quiere depositar?</string>
    <string name="hint_et_cantidad">Cantidad</string>
    <string name="tv_retirar">¿Cuanto dinero quiere retirar?</string>
    <string name="tv_total">Total: %1$.2f€</string>
    <string name="campos_obligatorios">Debe introducir todos los campos obligatorios (*)</string>
    <string name="inicio_sesion">Sesión iniciada correctamente</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="dialog_msg_perfil">¿Estás seguro de que quieres cerrar la sesión?</string>
    <string name="tlf_invalido">El número de teléfono es inválido</string>
    <string name="update_correcto">Datos actualizados correctamente</string>
    <string name="contra_obligatoria">Debe introducir una contraseña para cambiarla</string>
    <string name="rep_contra_obligatoria">Debe repetir la contraseña</string>
    <string name="contra_no_coinciden">Las contraseñas no coinciden</string>
    <string name="contra_error">No se ha podido cambiar la contraseña</string>
    <string name="contra_correcta">Contraseña actualizada correctamente</string>
    <string name="grupo_correcto">Grupo creado correctamente</string>
    <string name="eliminar_yo">No puedes eliminarte del grupo</string>
    <string name="tit_dialog_grupo">Eliminar participante</string>
    <string name="dialog_msg_grupo">¿Estás seguro de que quieres eliminar este participante?</string>
    <string name="usuario_grupo">Este usuario ya pertenece al grupo</string>
    <string name="user_no_registrado">El usuario introducido no está registrado en la aplicación</string>
    <string name="email_incorrecto">El email introducido es inválido</string>
    <string name="registro_correcto">Se ha registrado correctamente</string>
    <string name="mi_balance">Mi balance</string>
    <string name="minimo_personas">Debe haber mínimo 2 personas en el grupo</string>
    <string name="tv_gasto_usuario">%1$s\n%2$s</string>
    <string name="euros">%1$.2f€</string>
    <string name="tv_grupo_tu_pagas">Deuda: %1$.2f€</string>
    <string name="tv_grupo_total_pagar">Total: %1$.2f€</string>
    <string name="tv_gasto_pago">%1$s pagó %2$.2f€</string>
    <string name="btn_pagar">Pagar deudas</string>
    <string name="tv_participantes_gasto">¿Quienes van a pagar?</string>
    <string name="tv_titulo">Título</string>
    <string name="tv_descripcion">Descripción</string>
    <string name="btn_eliminar">Eliminar grupo</string>
    <string name="mis_grupos">Mis grupos</string>
    <string name="tv_gasto_pagado">Pagaste %1$.2f€</string>
    <string name="te_deben">Te deben</string>
    <string name="debes">Debes</string>
    <string name="usuario_aniadido">Usuario añadido al grupo</string>
    <string name="dialog_msg_eliminar">¿Desea eliminar el grupo definitivamente?</string>
    <string name="btn_eliminar_d">Eliminar</string>
    <string name="grupo_editado">Grupo editado correctamente</string>
    <string name="grupo_eliminado">Grupo eliminado correctamente</string>
    <string name="deposito_correcto">Dinero ingresado con éxito</string>
    <string name="cantidad_obligatoria">Debes introducir una cantidad</string>
    <string name="te_deben_g">Te deben: %1$.2f€</string>
    <string name="debes_g">Debes: %1$.2f€</string>
    <string name="tit_dialog_users">Usuarios</string>
    <string name="error_retiro">La cantidad a retirar no puede superar el balance disponible</string>
    <string name="retiro_correcto">Dinero retirado con éxito</string>
    <string name="una_persona">Debes seleccionar al menos 1 persona</string>
    <string name="pagar_solo">No puedes pagarlo solo</string>
    <string name="gasto_correcto">Gasto añadido con éxito</string>
    <string name="historial_retiro">Has retirado %1$.2f€</string>
    <string name="historial_ingreso">Has ingresado %1$.2f€</string>
    <string name="historial_pagado">Has pagado %1$.2f€</string>
    <string name="usuario_aniadido_correcto">Usuario añadido correctamente</string>
    <string name="dias">Hace %1$d días</string>
    <string name="horas">Hace %1$d horas</string>
    <string name="mins">Hace %1$d minutos</string>
    <string name="menos_minuto">Hace menos de un minuto</string>
    <string name="historial_gasto">%1$s ha añadido un nuevo gasto</string>
    <string name="yo">Yo (%1$s)</string>
    <string name="nuevo_grupo">Nuevo grupo</string>
    <string name="cambiar_datos">Cambiar datos</string>
    <string name="editar_grupo">Editar grupo</string>
    <string name="aniadir_persona">Añadir persona</string>
    <string name="eliminar_hist">Borrar historial</string>
    <string name="seguro_borrar">¿Estás seguro de que quieres borrar todo el historial?</string>
    <string name="historial_borrado_con_xito">Historial borrado con éxito</string>
    <string name="no_tienes_dinero">No tienes suficiente dinero para pagar tu deuda</string>
    <string name="no_deudas">No tienes deudas</string>
    <string name="no_saldo">No tienes suficiente saldo para pagar tus deudas</string>
    <string name="err_un_centimo">No puedes añadir un gasto de 1 céntimo</string>
    <string name="un_centimo">0.01</string>
    <string name="tv_pagan">Pagan</string>
    <string name="configuraci_n_del_grupo">Configuración del grupo</string>
</resources>