<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_registro"
            android:textAlignment="center"
            android:textSize="@dimen/tam_tv_bienvenida"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imvPerfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margen"
            android:src="@drawable/perfil" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen"
            android:hint="@string/hint_et_nombre"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNomApeReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen"
            android:hint="@string/hint_et_email"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen"
            android:hint="@string/hint_et_contra"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContraReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen"
            android:hint="@string/hint_et_telefono"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTlfReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCrearCuentaReg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_crear_cuenta"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>