<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GrupoFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTituloGrupoDetalle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_titulo"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPersGrupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingEnd="@dimen/margen"
                    android:textSize="20sp"
                    app:icon="@drawable/baseline_person_24"
                    app:iconGravity="end"
                    app:iconSize="28dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDescripcionGrupoDetalle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_descripcion"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDeudaGrupoDetalle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvTotalGrupoDetalle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_grupo_total_pagar"
                        android:textSize="20sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnPagarDeudas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGastosGrupoDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efabNuevoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/margen"
            android:text="@string/nuevo_gasto"
            app:icon="@drawable/baseline_add_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</FrameLayout>